--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,8 @@
         </div>
       </div>
 
+      <p id="projected-total" style="text-align: center; font-size: 0.875rem; color: var(--pico-muted-color); margin-bottom: 1.5rem;" class="hidden"></p>
+
       <div id="saturday-warning" class="saturday-warning hidden">
         Today is Saturday. Deadline is Monday at midnight. Submit your video.
       </div>
@@ -153,6 +155,8 @@
         </div>
       </div>
 
+      <p id="admin-projected-total" style="text-align: center; font-size: 0.875rem; color: var(--pico-muted-color); margin-bottom: 1.5rem;" class="hidden"></p>
+
       <!-- Storage Indicator -->
       <div class="storage-indicator">
         <div class="storage-bar">
@@ -164,7 +168,7 @@
       <div id="consequence-section" class="consequence-box hidden">
         <h3>Deadline Missed</h3>
         <p id="consequence-text">No approved submission last week. You can trigger the consequence.</p>
-        <button id="trigger-consequence-btn" class="contrast">Trigger Consequence ($5)</button>
+        <button id="trigger-consequence-btn" class="contrast">Trigger Consequence</button>
         <p id="consequence-result" style="margin-top: 1rem;"></p>
       </div>
 
@@ -268,6 +272,14 @@
         document.getElementById('weeks-left').textContent = data.weeksUntilWedding;
         document.getElementById('streak').textContent = data.streak;
         document.getElementById('weekly-code').textContent = data.weeklyCode;
+
+        const projectedEl = document.getElementById('projected-total');
+        if (data.projectedTotal > 0) {
+          projectedEl.textContent = `If you miss every deadline from now until the wedding, you'll owe $${data.projectedTotal}`;
+          projectedEl.classList.remove('hidden');
+        } else {
+          projectedEl.classList.add('hidden');
+        }
 
         const saturdayWarning = document.getElementById('saturday-warning');
         saturdayWarning.classList.toggle('hidden', !data.isSaturday || data.thisWeekStatus !== 'not_submitted');
@@ -373,6 +385,14 @@
         document.getElementById('admin-days-left').textContent = data.daysUntilWedding ?? 0;
         document.getElementById('consequences-count').textContent = deadlineData.consequencesCount ?? 0;
 
+        const adminProjectedEl = document.getElementById('admin-projected-total');
+        if (data.projectedTotal > 0) {
+          adminProjectedEl.textContent = `Projected total if all deadlines missed: $${data.projectedTotal}`;
+          adminProjectedEl.classList.remove('hidden');
+        } else {
+          adminProjectedEl.classList.add('hidden');
+        }
+
         // Storage indicator
         if (storageData) {
           const storageBar = document.getElementById('storage-bar-fill');
@@ -399,8 +419,13 @@
         const consequenceSection = document.getElementById('consequence-section');
         if (deadlineData.canTriggerConsequence) {
           consequenceSection.classList.remove('hidden');
+          const streakInfo = deadlineData.consequenceStreak > 0
+            ? ` (miss streak: ${deadlineData.consequenceStreak})`
+            : '';
           document.getElementById('consequence-text').textContent =
-            `No approved submission for ${deadlineData.previousWeek}. You can trigger the consequence.`;
+            `No approved submission for ${deadlineData.previousWeek}. Consequence: $${deadlineData.nextAmount}${streakInfo}`;
+          document.getElementById('trigger-consequence-btn').textContent =
+            `Trigger Consequence ($${deadlineData.nextAmount})`;
         } else {
           consequenceSection.classList.add('hidden');
         }
@@ -529,7 +554,8 @@
     });
 
     document.getElementById('trigger-consequence-btn').addEventListener('click', async () => {
-      if (!confirm('Trigger consequence? This will reset the streak and notify Victor to pay $5.')) {
+      const btnText = document.getElementById('trigger-consequence-btn').textContent;
+      if (!confirm(`${btnText}? This will reset the practice streak and notify Victor.`)) {
         return;
       }
 
@@ -539,7 +565,7 @@
 
         const resultEl = document.getElementById('consequence-result');
         if (res.ok) {
-          resultEl.innerHTML = `Consequence triggered. Victor has been notified. <a href="${data.paypalLink}" target="_blank">PayPal link ($5)</a>`;
+          resultEl.innerHTML = `Consequence triggered ($${data.amount}). Victor has been notified. <a href="${data.paypalLink}" target="_blank">PayPal link</a>${data.consequenceStreak >= 3 ? ` <strong>(${data.consequenceStreak} misses in a row!)</strong>` : ''}`;
           loadAdminDashboard();
         } else {
           resultEl.textContent = data.error;
